--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 /* BASIC */
 
   html {
-    background-color: #56baed;
+    background-color: #fff;
   }
   .menuOsai {
     position: relative;
@@ -12,6 +12,17 @@
     position: relative;
     padding:10px 0px;
     border-bottom: 4px solid #000;
+  }
+  .titleOsai{
+    font-size: 16px;
+    text-align: center;
+    margin-top: 30px;
+    text-transform: uppercase;
+    font-weight: 800;
+  }
+  .listaOsai p {
+    text-align: center;
+    font-size: 16px;
   }
   .interrogaUbiOsai a{
     width: 100%;
