--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,48 @@ html {
 	background-color: #fff;
 }
 
-.menu2 {
-	background-color: white;
-	margin: 10px 10px 0px 10px;
-	color: #0a646b;
+.container {
+	margin-top: 25px;
 }
 
-.menu2 p{
-	text-align:center; 
-	vertical-align: middle;
+.row {
+	display: flex;
+	justify-content: space-evenly;
 }
 
-.container2{
-	background-color: lightsteelblue;
+.blue {
+	--blueOsai: #049ddd;
+	background-color: var(--blueOsai);
+}
+
+.column {
+	margin-bottom: 12px;
+	border: 2px #D5D5D5 solid;
+	background-color: gainsboro;
+	text-align: center;
+	border-radius: 13px;
+	--dim: calc( 100vw/2 - 30px);
+	min-width: var(--dim);
+	min-height: var(--dim);
+	position: relative;
+	
+}
+
+.column i {
+	position: absolute;
+	top: 25px;
+	width: 100%;
+	left: 0px;
+}
+.column p {
+	position: absolute;
+	bottom: 10px;
+	left: 0px;
+	text-align: center;
+	width: var(--dim);
+	font-size: 12px;
+	font-weight: 700;
+	margin-bottom: 0px;
 }
 
 .menuOsai {
@@ -82,9 +111,6 @@ input:focus {
 }
 .green {
 	background-color: #00800085;
-}
-.blue {
-	background-color: #0000ff85;
 }
 
 #appendData {
@@ -165,9 +191,6 @@ input:focus {
 }
 .green {
 	background-color: #00800085;
-}
-.blue {
-	background-color: #0000ff85;
 }
 .menuOsai p {
 	position: absolute;
