--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -611,10 +611,11 @@ input::-webkit-inner-spin-button {
 	-o-transform: translateX(-50%); /* Opera */
 	-ms-transform: translateX(-50%); /* Internet Explorer */
 	transform: translateX(-50%); /* CSS3 */
-	z-index: 1;
-	opacity: 0.8;
+	z-index: 999999;
+	opacity: 1;
 	width: 90%;
-	bottom: 0px;
+	top: 80px;
+    text-align: center;
 }
 .alert > p {
 	margin: 0px;
